<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeltaDental</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">SIGNIN</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="no_account">No Account ?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="memberId">MemberId</string>
    <string name="password">Password</string>
    <string name="dob">DOB</string>
    <string name="ssn">SSN</string>
    <string name="txtVwConPassword">Confirm Password</string>
    <string name="date">Date</string>
    <string name="logIntoYourAccount">Login To Your Account</string>
    <string name="title_activity_delta_dental_home">DeltaDentalHomeActivity</string>
    <string name="delta_dental_home">Welcome To Delta Dental Home</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_find_dentist">FindDentistActivity</string>
    <string name="title_activity_near_me_current_loc">NearMeCurrentLocActivity</string>
    <string name="title_activity_near_me_near_addr">NearMeNearAddrActivity</string>
    <string name="title_activity_near_addr_current_loc_fragment">NearAddrCurrentLocFragment</string>
    <string name="title_activity_near_addr_near_addr">NearAddrNearAddrActivity</string>
    <string name="fiveMiles">5 Miles</string>
    <string name="tenMiles">10 Miles</string>
    <string name="fifteenMiles">15 Miles</string>
    <string name="twnentyMiles">20 Miles</string>
    <string name="findNearMe">Find Near Me</string>
    <string name="findNearTheAddress">Find Near The Address</string>
    <string name="enterStreetAddress">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zipcode</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_find_dentist_near_me">FindDentistNearMeActivity</string>
    <string name="title_activity_providers_list">ProvidersListActivity</string>
    <string name="title_activity_provider_list">Provider List</string>
    <string name="first_name">FirstName  :</string> 
    <string name="last_name">LastName  :</string>
    <string name="phone">Phone  :</string>
    <string name="fax">Fax  :</string>
    <string name="speciality">Speciality  :</string>
    <string name="address">Address  :</string>
    <string name="zipCode">ZipCode  :</string>
    <string name="delta_dental_california">Delta Dental of California</string>
    <string name="addr1">100 First st,SanFrancisco</string>
    <string name="addr2">CA 94105,USA</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="welcome">Welcome </string>
    <string name="title_activity_recent">RecentActivity</string>
    <string name="patient_name">Patient Name  :  </string>
    <string name="dentist_name">Dentist Name  :  </string>
    <string name="service_received">Service Received  :</string> 
    <string name="covered_cost">Covered Cost  :</string> 
    <string name="your_cost">Your Cost  :</string>
    <string name="date_of_service">Date Of Service  :</string>  
    <string name="pressure">Pressure : </string>
     <string name="humidity">Humidity :</string>  
      <string name="wind">Wind :</string>
      <string name="Home">Home</string>   
      <string name="find_dentist_near_me">Find Dentist Near Me</string>   
      <string name="find_dentist_near_address">Find Dentist Near Address</string>   
      <string name="Benefits_and_Elgiblity">Benefits And Elgiblity</string>   
      <string name="check_claims">Check Claims</string>    
      <string name="local_dental_services">Local Dental Services</string>   
      <string name="logout">Logout</string>    
        <string name="one_km">1 KM</string>  
          <string name="two_km">2 KM</string>   
         
    
</resources>