<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matParMatPar"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NearAddrNearAddrActivity" >

    <EditText
        android:id="@+id/streetAddress"
        style="@style/matParWrapCon"
        android:hint="@string/enterStreetAddress"
        android:layout_marginTop="32dp"       
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/city"
        style="@style/wrapConWrapCon"
       
        android:layout_below="@+id/streetAddress"
        android:layout_alignLeft="@+id/streetAddress"
        android:layout_centerHorizontal="true"
        
        android:hint="@string/city" />

    <EditText
        android:id="@+id/state"
        android:layout_below="@+id/streetAddress"
        android:layout_toRightOf="@+id/city"
        style="@style/wrapConWrapCon"
     

        android:hint="@string/state" 
         />
 
     <EditText
        android:id="@+id/edtTxtZipCodeNearMeNearAddr" 
        android:layout_below="@+id/streetAddress"
        android:layout_alignRight="@+id/streetAddress"
       
        style="@style/wrapConWrapCon"
      
        android:gravity="right"
     
        android:hint="@string/zipCode" 
         />
     
        <RadioGroup
        android:id="@+id/radGroupNearMeNearAddr" 
        style="@style/wrapConWrapCon"
       
        android:layout_below="@+id/edtTxtZipCodeNearMeNearAddr"  
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/radio1NearMeNearAddr"
            style="@style/wrapConWrapCon"
          
            android:checked="true"
            android:text="@string/fiveMiles" />

        <RadioButton
            android:id="@+id/radio2NearMeNearAddr"
            style="@style/wrapConWrapCon"
        
            android:text="@string/tenMiles" />

       
        
            <RadioButton
            android:id="@+id/radio4NearMeNearAddr"  
            style="@style/wrapConWrapCon"

            android:text="@string/twnentyMiles" />              
    </RadioGroup> 
     
       <Button
        android:id="@+id/btnNearMeNearAddr"
     
        android:layout_width="wrap_content"
        android:layout_below="@+id/radGroupNearMeNearAddr"
        android:layout_alignRight="@+id/radGroupNearMeNearAddr"  
        android:layout_marginTop="10dip"
        style="@style/standardButton" 
        android:text="@string/findNearMe" />
       
       <ListView
        android:id="@+id/listVwNearMeNearAddr"   
        style="@style/matParMatPar"
      
        android:layout_gravity="start"
        android:background="@drawable/slidingmenu_shadow"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" 
        android:layout_below="@+id/btnNearMeNearAddr"    
        />
</RelativeLayout>