<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matParMatPar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NearAddrNearAddrActivity" > 

    <EditText
        android:id="@+id/streetAddress"
        style="@style/matParWrapCon"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enterStreetAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/city"
        style="@style/wrapConWrapCon"
        android:layout_alignLeft="@+id/streetAddress"
        android:layout_below="@+id/streetAddress"
        android:layout_centerHorizontal="true"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/state"
        style="@style/wrapConWrapCon"
        android:layout_below="@+id/streetAddress"
        android:layout_toRightOf="@+id/city"
        android:hint="@string/state" />

    <EditText
        android:id="@+id/zipCodeNearAddrNearAddr"
        style="@style/wrapConWrapCon"
        android:layout_alignRight="@+id/streetAddress"
        android:layout_below="@+id/streetAddress"
        android:gravity="right"
        android:hint="@string/zipCode" />

    <Button
        android:id="@+id/btnNearAddrNearAddr"
        style="@style/standardButton"
        android:layout_width="wrap_content"
        android:layout_alignRight="@+id/zipCodeNearAddrNearAddr"
        android:layout_below="@+id/zipCodeNearAddrNearAddr"
        android:layout_marginTop="10dip"
        android:text="@string/findNearTheAddress" />

    <ListView
        android:id="@+id/listVwNearAddrNearAddr"
        style="@style/matParMatPar"
        android:layout_below="@+id/btnNearAddrNearAddr"
        android:layout_gravity="start"
        android:background="@drawable/slidingmenu_shadow"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" />

</RelativeLayout>