<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matParMatPar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeltaDentalActivity" >

    <TableRow
        style="@style/matParWrapCon" 
        android:layout_marginBottom="0dip" >

        <ImageView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_delta_dental" />
    </TableRow>

    <TableRow 
        style="@style/matParWrapCon"
        android:layout_marginBottom="0dip"
        android:layout_marginTop="20dip" >

        <TextView
            style="@style/invisibleTextView"
            android:layout_weight="1" />

        <TextView
            style="@style/titleTextView"
            android:layout_weight="5"
            android:background="#e0e0e0" 
            android:padding="10dip"
            android:text="@string/logIntoYourAccount" />

        <TextView
            style="@style/invisibleTextView"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        style="@style/standardTableRow"
        android:layout_marginTop="0dip" >

        <TextView
           style="@style/standardTextView"
            android:layout_weight="1"
             />

        <TableLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#e8e9ea"
            android:gravity="left"
            android:padding="15dip"
            android:singleLine="true" >

            <TableRow style="@style/matParWrapCon" >

                <EditText android:id="@+id/edtTxtMemberIdLogin" 
                    style="@style/standardEditText"
                    android:layout_weight="3"
                    android:hint="@string/memberId" />
      

                <TextView
                    style="@style/invisibleTextView"
                    android:layout_weight="1.5" />
            </TableRow>

            <TableRow style="@style/matParWrapCon" >

                <EditText
                    android:id="@+id/edtTxtPasswordLogin" 
                    style="@style/standardEditText"
                    android:layout_weight="3"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnLogin"   
                    style="@style/standardButton"
                    android:layout_weight="1.5"
                    android:text="@string/login" />
            </TableRow>

            <TableRow
                style="@style/matParWrapCon" 
                android:layout_marginTop="10dip" >

                <TextView
                    style="@style/standardTextView"
                    android:layout_weight="3"
                    android:text="@string/no_account" />

                <Button
                    android:id="@+id/btnRegister"   
                    style="@style/standardButton" 
                    android:layout_weight="1.5"
                    android:text="@string/register" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/invisibleTextView"
            android:layout_weight="1" />
    </TableRow>

</TableLayout>