<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matParMatPar"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecentVisitActivity" >

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/patient_name" />

        <TextView
            android:id="@+id/txtVwPatientName"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/dentist_name" />

        <TextView
            android:id="@+id/txtVwDentistName"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/service_received" />

        <TextView
            android:id="@+id/txtVwServiceReceived"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/date_of_service" />

        <TextView
            android:id="@+id/txtVwDateOfService"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/covered_cost" />

        <TextView
            android:id="@+id/txtVwCoveredCost"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            style="@style/wrapConWrapCon"
            android:text="@string/your_cost" />

        <TextView
            android:id="@+id/txtVwYourCost"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/txtVwClaimedAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/matParWrapCon"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/txtVwRemainingAmount"
            style="@style/wrapConWrapCon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/wrapConWrapCon"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout> 