<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NearAddrCurrentLocFragment" >

      <RadioGroup
        android:id="@+id/radGroupNearMeCurrentLoc" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp" >

        <RadioButton
            android:id="@+id/radio1NearMeCurrentLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fiveMiles" />

        <RadioButton
            android:id="@+id/radio2NearMeCurrentLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenMiles" />

       
        
            <RadioButton
            android:id="@+id/radio4NearMeCurrentLoc" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twnentyMiles" />              
    </RadioGroup> 

    <Button
        android:id="@+id/btnNearMeCurrentLoc" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radGroupNearMeCurrentLoc"
        android:layout_alignRight="@+id/radGroupNearMeCurrentLoc" 
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="10dip"
        android:text="@string/findNearMe" />
   
     <ListView
        android:id="@+id/listVwNearMeCurrentLoc"   
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/slidingmenu_shadow"  
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" 
        android:layout_below="@+id/btnNearMeCurrentLoc"   
        />

</RelativeLayout>