<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

   <TableLayout 
    
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
         <TableRow 
        android:id="@+id/tableRow1" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent">  
        <TextView  
            android:id="@+id/txtVwMemberId" android:text="@string/memberId"  
            android:layout_weight="2" 
           
            android:padding="20dip" android:layout_width="0px"  android:gravity="left"/>  
        <EditText
            android:id="@+id/edtTxtMemberIdLogin"
            android:layout_weight="2" 
            android:padding="20dip" android:gravity="center"
            android:singleLine="true" 
             android:layout_width="0px"  />
         

    </TableRow> 
    
          <TableRow 
        android:id="@+id/tableRow2" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent">  
        <TextView 
            android:id="@+id/TextView04" 
            android:layout_weight="2"   android:text="@string/password" android:layout_width="0px" 
            android:padding="20dip" android:gravity="left"/>  
      <EditText
android:id="@+id/edtTxtPasswordLogin" android:padding="20dip"  
  android:layout_width="0px" android:layout_weight="2"  
android:gravity="center" android:inputType="textPassword">
 
<requestFocus />
</EditText>  

    </TableRow> 
    
           <TableRow 
        android:id="@+id/tableRow1"     
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" android:gravity="center">  
        
        <Button
            android:id="@+id/btnLogin"   
            
            android:text="@string/signin"
            android:layout_width="wrap_content" 
            android:padding="20dip" android:gravity="left"/> 
                     

    </TableRow> 
   </TableLayout>
</RelativeLayout>