<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matParMatPar" 
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeltaDentalHomeActivity" >

    <TextView
        android:id="@+id/welcome"
        style="@style/wrapConWrapCon" />

    <RelativeLayout style="@style/matParWrapCon" 
        android:layout_marginTop="25dip"
        android:background="@drawable/weather_info_background">

        <TextView 
            android:id="@+id/cityText"  
            style="@style/wrapConWrapCon"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/condIcon"
            style="@style/wrapConWrapCon"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/cityText" />

        <TextView
            android:id="@+id/condDescr"
            style="@style/wrapConWrapCon"
            android:layout_alignLeft="@id/condIcon"
            android:layout_below="@id/condIcon" />

        <TextView
            android:id="@+id/temp"
            style="@style/wrapConWrapCon"
            android:layout_alignBaseline="@id/condDescr"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/condDescr" />

        <TextView
            android:id="@+id/pressLab"
            style="@style/wrapConWrapCon"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/condDescr"
            android:layout_marginTop="15dp"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/press"
            style="@style/wrapConWrapCon"
            android:layout_alignBaseline="@id/pressLab"
            android:layout_toRightOf="@id/pressLab" />

        <TextView
            android:id="@+id/humLab"
            style="@style/wrapConWrapCon"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pressLab"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/hum"
            style="@style/wrapConWrapCon"
            android:layout_alignBaseline="@id/humLab"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/humLab" />

        <TextView
            android:id="@+id/windLab"
            style="@style/wrapConWrapCon"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/humLab"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/windSpeed"
            style="@style/wrapConWrapCon"
            android:layout_alignBaseline="@id/windLab"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/windLab" />

        <TextView
            android:id="@+id/windDeg"
            style="@style/wrapConWrapCon"
            android:layout_alignBaseline="@id/windLab"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/windSpeed" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnRecentActivity"
        style="@style/standardButton"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="100dp"
        android:text="@string/recent_activity" />

</LinearLayout>